--- a/about.html
+++ b/about.html
@@ -60,12 +60,12 @@
         </div>
 
         <div class="contentContainer">
-            <div class="aboutContent">
+            <div class="content">
                 <div class="heading">
                     <h1>About</h1>
                 </div>
                 <hr class="headinglinebreak">
-                <img src="images/about/-A- header.jpg" alt="">
+                <img id="aboutImg" src="images/about/-A- header.jpg" alt="">
                 <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
                         class="colouredvbar">|</span><span class="smallSpace"> </span><i
                         class="ballyfinItalic">ballyfin</i>
