--- a/weddingcakes.html
+++ b/weddingcakes.html
@@ -31,7 +31,7 @@
                         alt="The Cake Company Ballyfin Logo"></a>
             </div>
             <nav aria-label="links" class="links">
-                <div class="home"><a class="current" href="index.html">Home</a></div>
+                <div class="home"><a href="index.html">Home</a></div>
                 <div class="about"><a href="about.html">About</a></div>
                 <div class="weddingCakes"><a class="current" href="weddingcakes.html">Weddings</a></div>
                 <div class="celebrationCakes"><a href="celebrationcakes.html">Celebrations</a></div>
