--- a/weddingcakes.html
+++ b/weddingcakes.html
@@ -65,6 +65,35 @@
                     <h1>Wedding Cakes</h1>
                 </div>
                 <hr class="headinglinebreak">
+
+                <div class="galleryGrid">
+
+                    <!--<img class="image-grid-row-3 image-grid-col-2"
+                        src="images/weddingcakes/DíadeMuertoscake/-W- DayDead -1.jpg" alt="">
+                    <img class="image-grid-row-2" src="images/weddingcakes/Christmas/-W- Christmas -1.jpg" alt="">
+                    <img src="images/weddingcakes/DíadeMuertoscake/" alt="">
+                    <img class="image-grid-row-2 image-grid-col-3"
+                        src="images/weddingcakes/Suitcase/-W- Suitcase -1.jpg" alt="">
+                    <img class="image-grid-row-2" src="images/weddingcakes/May4th/-W- May4th -2.jpg" alt="">-->
+
+                    <img class="image-grid-row-3 image-grid-col-2" src="images/weddingcakes/May4th/-W- May4th -2.jpg"
+                        alt="">
+                    <img class="image-grid-row-1 image-grid-col-2"
+                        src="images/weddingcakes/Suitcase/-W- Suitcase -1.jpg" alt="">
+                    <img class="image-grid-row-2 image-grid-col-2" src="images/weddingcakes/May4th/-W- May4th -3.jpg"
+                        alt="">
+
+                    <img class="image-grid-row-2 image-grid-col-3"
+                        src="images/weddingcakes/BirdCage/-W- BirdCage -D1.jpg" alt="">
+                    <img class="image-grid-row-2 image-grid-col-1"
+                        src="images/weddingcakes/DíadeMuertoscake/-W- DayDead -1.jpg" alt="">
+
+                    <img class="image-grid-row-3 image-grid-col-2" src="images/weddingcakes/UpDown/-W- UpDown -1.jpg"
+                        alt="">
+
+                </div>
+
+                <div class="bottomSpace"></div>
             </div>
 
         </div>
