--- a/celebrationcakes.html
+++ b/celebrationcakes.html
@@ -65,6 +65,25 @@
                     <h1>Celebration Cakes</h1>
                 </div>
                 <hr class="headinglinebreak">
+
+                <div class="galleryGrid">
+
+                    <video id="harryStylesVideo" class="gallery image-grid-row-2 image-grid-col-1" controls
+                        poster="images/celebrationcakes/HarryStyles/-C- Harry (9-16).jpg">
+                        <source src="images/celebrationcakes/HarryStyles/Harry Styles Cake.mp4" type="video/mp4">
+                        Your browser does not support mp4 videos
+                    </video>
+
+                    <img class="image-grid-row-1 image-grid-col-2" src="images/celebrationcakes/Duck/-C- Duck -1.jpg"
+                        alt="">
+                    <img class="image-grid-row-2 image-grid-col-1"
+                        src="images/celebrationcakes/Whimsical/-C- Whimsical -1.jpg" alt="">
+                    <img class="image-grid-row-3 image-grid-col-2" src="images/celebrationcakes/Peter/-C- Peter D1.jpg"
+                        alt="">
+
+                </div>
+
+                <div class="bottomSpace"></div>
             </div>
         </div>
 
