--- a/about.html
+++ b/about.html
@@ -33,9 +33,11 @@
             <nav aria-label="links" class="links">
                 <div class="home"><a href="index.html">Home</a></div>
                 <div class="about"><a class="current" href="about.html">About</a></div>
-                <div class="weddingCakes"><a href="weddingcakes.html">Weddings</a></div>
-                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebrations</a></div>
+                <div class="weddingCakes"><a href="weddingcakes.html">Wedding cakes</a></div>
+                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration cakes</a></div>
                 <div class="contact"><a href="contact.html">Contact</a></div>
+                <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
+                </div>
             </nav>
             <div class="social">
                 <div class="instagram"><a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
@@ -75,17 +77,17 @@
                 <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
                         class="colouredvbar">|</span><span class="smallSpace"> </span><i
                         class="ballyfinItalic">ballyfin</i>
-                    designs and makes one-of-a-kind cakesfor your special
+                    designs and makes one-of-a-kind cakes for your special
                     occasion
-                    … weddings … anniversaries … birthdays … christenings …</p>
+                    … weddings … anniversaries … birthdays … &nbsp;christenings …</p>
                 <p class="abouttext">We will discuss your ideas on style and theme to realise the cake you want for you
-                    celebration and you will be brought through the different cake flavours options.</p>
+                    celebration and you will be brought through the different cake flavour options.</p>
                 <p class="abouttext">Each cake is made in our studio using the best ingredients possible … 70% Belgian
                     chocolate … fresh free-range eggs … all combined with love and care.</p>
-                <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
-                        class="colouredvbar">|</i><span class="smallSpace"> </span><i
-                            class="ballyfinItalic">ballyfin</i> looks forward making a special
-                        cake specially for you …
+                <p class="abouttext">The Cake Company<span class="smallSpace"> </span>
+                    <span class="colouredvbar">|</span><span class="smallSpace"> </span>
+                    <i class="ballyfinItalic">ballyfin</i> looks forward making a special
+                    cake specially for you …
                 </p>
                 <div class="bottomSpace"></div>
             </div>
