--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,12 @@
             <nav aria-label="links" class="links">
                 <div class="home"><a href="index.html">Home</a></div>
                 <div class="about"><a href="about.html">About</a></div>
-                <div class="weddingCakes"><a href="weddingcakes.html">Weddings</a></div>
-                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebrations</a></div>
+                <div class="weddingCakes"><a href="weddingcakes.html">Wedding cakes</a></div>
+                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration cakes</a>
+                </div>
                 <div class="contact"><a class="current" href="contact.html">Contact</a></div>
+                <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
+                </div>
             </nav>
             <div class="social">
                 <div class="instagram"><a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
@@ -133,7 +136,7 @@
                                 Ballyfin,<br>
                                 Co. Laois.<br>
                                 R32 V3V6<br>
-                                <a class="smallPhone" href="tel:=057 875 55992">057 875 55992</a><br>
+                                <a class="smallPhone" href="tel:=057 875 5992">057 875 5992</a><br>
                             </p>
                         </div>
                     </div>
