--- a/weddingcakes.html
+++ b/weddingcakes.html
@@ -33,9 +33,12 @@
             <nav aria-label="links" class="links">
                 <div class="home"><a href="index.html">Home</a></div>
                 <div class="about"><a href="about.html">About</a></div>
-                <div class="weddingCakes"><a class="current" href="weddingcakes.html">Weddings</a></div>
-                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebrations</a></div>
+                <div class="weddingCakes"><a class="current" href="weddingcakes.html">Wedding cakes</a></div>
+                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration cakes</a>
+                </div>
                 <div class="contact"><a href="contact.html">Contact</a></div>
+                <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
+                </div>
             </nav>
             <div class="social">
                 <div class="instagram"><a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
