--- a/weddingcakes.html
+++ b/weddingcakes.html
@@ -26,15 +26,17 @@
 
     <body>
 
+        <div class="sideNavOverlay"></div>
         <div class="sideNav">
+
             <div class="logo"><a href="index.html"><img src="images/logoblack.png"
                         alt="The Cake Company Ballyfin Logo"></a>
             </div>
             <nav aria-label="links" class="links">
                 <div class="home"><a href="index.html">Home</a></div>
                 <div class="about"><a href="about.html">About</a></div>
-                <div class="weddingCakes"><a class="current" href="weddingcakes.html">Wedding cakes</a></div>
-                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration cakes</a>
+                <div class="weddingCakes"><a class="current" href="weddingcakes.html">Wedding Cakes</a></div>
+                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a>
                 </div>
                 <div class="contact"><a href="contact.html">Contact</a></div>
                 <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
@@ -46,6 +48,7 @@
                 <div class="facebook"><a href="https://www.facebook.com/TheCakeCompanyBallyfin" target="_blank"><img
                             src="images/socialmedia/facebook_icon.svg" alt="Facebook"></a></div>
             </div>
+
         </div>
 
         <div class="mobileNavContainer">
@@ -80,6 +83,7 @@
                         <div class="overlay" onclick="togglePopup('popup-1')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-1')">&times;</div>
+                            <img src="images/weddingcakes/May4th/-W- May4th -2.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
                             </div>
@@ -109,6 +113,7 @@
                         <div class="overlay" onclick="togglePopup('popup-2')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-2')">&times;</div>
+                            <img src="images/weddingcakes/Suitcase/-W- Suitcase -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;Going Away Cases</h1>
                             </div>
@@ -129,6 +134,7 @@
                         <div class="overlay" onclick="togglePopup('popup-3')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-3')">&times;</div>
+                            <img src="images/weddingcakes/DíadeMuertoscake/-W- DayDead -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;Till Death Do Us Part</h1>
                             </div>
@@ -150,6 +156,7 @@
                         <div class="overlay" onclick="togglePopup('popup-4')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-4')">&times;</div>
+                            <img src="images/weddingcakes/AutumnColours/-W- AutumnColours -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;Till Death Do Us Part</h1>
                             </div>
@@ -171,6 +178,7 @@
                         <div class="overlay" onclick="togglePopup('popup-5')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-5')">&times;</div>
+                            <img src="images/weddingcakes/ButlerHouseCake/-W- ButlerHouseCake -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;Till Death Do Us Part</h1>
                             </div>
@@ -191,6 +199,7 @@
                         <div class="overlay" onclick="togglePopup('popup-6')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-6')">&times;</div>
+                            <img src="images/weddingcakes/BirdCage/-W- BirdCage -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;“Be Mine Forever”</h1>
                             </div>
@@ -215,6 +224,7 @@
                         <div class="overlay" onclick="togglePopup('popup-7')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-7')">&times;</div>
+                            <img src="images/weddingcakes/Christmas/-W- Christmas -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;Christmas Wedding Cake</h1>
                             </div>
@@ -237,6 +247,7 @@
                         <div class="overlay" onclick="togglePopup('popup-8')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-8')">&times;</div>
+                            <img src="images/weddingcakes/UpDown/-W- UpDown -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;Upside Down Cake</h1>
                             </div>
@@ -261,6 +272,7 @@
                         <div class="overlay" onclick="togglePopup('popup-9')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-9')">&times;</div>
+                            <img src="images/weddingcakes/ColourCombination/-W- ColourCombination -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;Upside Down Cake</h1>
                             </div>
@@ -285,6 +297,7 @@
                         <div class="overlay" onclick="togglePopup('popup-10')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-10')">&times;</div>
+                            <img src="images/weddingcakes/IndianCake/-W- IndianCake -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;Upside Down Cake</h1>
                             </div>
@@ -309,6 +322,7 @@
                         <div class="overlay" onclick="togglePopup('popup-11')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-11')">&times;</div>
+                            <img src="images/weddingcakes/May4th/-W- May4th -3.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
                             </div>
@@ -338,6 +352,7 @@
                         <div class="overlay" onclick="togglePopup('popup-12')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-12')">&times;</div>
+                            <img src="images/weddingcakes/JustMarried/-W- JustMarried -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
                             </div>
@@ -367,6 +382,7 @@
                         <div class="overlay" onclick="togglePopup('popup-13')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-13')">&times;</div>
+                            <img src="images/weddingcakes/PaintStrokeCake/-W- PaintStrokeCake -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
                             </div>
@@ -396,6 +412,7 @@
                         <div class="overlay" onclick="togglePopup('popup-14')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-14')">&times;</div>
+                            <img src="images/weddingcakes/PearlAndJewel/-W- PearlAndJewel-1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
                             </div>
@@ -425,6 +442,7 @@
                         <div class="overlay" onclick="togglePopup('popup-15')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-15')">&times;</div>
+                            <img src="images/weddingcakes/PinkCake/-W- PinkCake -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
                             </div>
@@ -454,6 +472,7 @@
                         <div class="overlay" onclick="togglePopup('popup-16')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-16')">&times;</div>
+                            <img src="images/weddingcakes/PrettyWhimsical/-W- PrettyWhimsical -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
                             </div>
@@ -483,6 +502,7 @@
                         <div class="overlay" onclick="togglePopup('popup-17')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-17')">&times;</div>
+                            <img src="images/weddingcakes/WillYou/-W- WillYou -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
                             </div>
@@ -512,6 +532,7 @@
                         <div class="overlay" onclick="togglePopup('popup-18')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-18')">&times;</div>
+                            <img src="images/weddingcakes/WhiteWedding/-W- WhiteWedding -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
                             </div>
@@ -541,6 +562,7 @@
                         <div class="overlay" onclick="togglePopup('popup-19')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-19')">&times;</div>
+                            <img src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
                             </div>
