--- a/weddingresources.html
+++ b/weddingresources.html
@@ -6,7 +6,7 @@
     <!-- mobile setting -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Primary Meta Tags -->
-    <title>About | The Cake Company Ballyfin</title>
+    <title>Wedding Resources | The Cake Company Ballyfin</title>
     <meta name="title" content="The Cake Company Ballyfin">
     <meta name="description"
         content="The Cake Company Ballyfin designs and makes unique cakes for your special occasions">
@@ -32,11 +32,12 @@
             </div>
             <nav aria-label="links" class="links">
                 <div class="home"><a href="index.html">Home</a></div>
-                <div class="about"><a class="current" href="about.html">About</a></div>
+                <div class="about"><a href="about.html">About</a></div>
                 <div class="weddingCakes"><a href="weddingcakes.html">Wedding Cakes</a></div>
-                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a></div>
+                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a>
+                </div>
                 <div class="contact"><a href="contact.html">Contact</a></div>
-                <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
+                <div class="weddingResources"><a class="current" href="weddingresources.html">Wedding Resources</a>
                 </div>
             </nav>
             <div class="social">
@@ -64,31 +65,10 @@
         <div class="contentContainer">
             <div class="content">
                 <div class="heading">
-                    <h1>About</h1>
+                    <h1>Wedding Resources</h1>
                 </div>
                 <hr class="headinglinebreak">
-                <img id="aboutImg" src="images/about/-A- header.jpg" alt="">
-                <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
-                        class="colouredvbar">|</span><span class="smallSpace"> </span><i
-                        class="ballyfinItalic">ballyfin</i>
-                    was established by Ann Tilson in 2015 ... following many
-                    years
-                    of passionate baking for friends and family.</p>
-                <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
-                        class="colouredvbar">|</span><span class="smallSpace"> </span><i
-                        class="ballyfinItalic">ballyfin</i>
-                    designs and makes one-of-a-kind cakes for your special
-                    occasion
-                    … weddings … anniversaries … birthdays … &nbsp;christenings …</p>
-                <p class="abouttext">We will discuss your ideas on style and theme to realise the cake you want for you
-                    celebration and you will be brought through the different cake flavour options.</p>
-                <p class="abouttext">Each cake is made in our studio using the best ingredients possible … 70% Belgian
-                    chocolate … fresh free-range eggs … all combined with love and care.</p>
-                <p class="abouttext">The Cake Company<span class="smallSpace"> </span>
-                    <span class="colouredvbar">|</span><span class="smallSpace"> </span>
-                    <i class="ballyfinItalic">ballyfin</i> looks forward making a special
-                    cake specially for you …
-                </p>
+
                 <div class="bottomSpace"></div>
             </div>
         </div>
