--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
             <nav aria-label="links" class="links">
                 <div class="home"><a href="index.html">Home</a></div>
                 <div class="about"><a href="about.html">About</a></div>
-                <div class="weddingCakes"><a href="weddingcakes.html">Wedding cakes</a></div>
-                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration cakes</a>
+                <div class="weddingCakes"><a href="weddingcakes.html">Wedding Cakes</a></div>
+                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a>
                 </div>
                 <div class="contact"><a class="current" href="contact.html">Contact</a></div>
                 <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
@@ -136,7 +136,7 @@
                                 Ballyfin,<br>
                                 Co. Laois.<br>
                                 R32 V3V6<br>
-                                <a class="smallPhone" href="tel:=057 875 5992">057 875 5992</a><br>
+                                <a class="smallPhone" href="tel:=057 875 5992">057 8755992</a><br>
                             </p>
                         </div>
                     </div>
